2 апреля 2019 г.
Реализовано объявление переменных:
Написана процедура Parser.Declarations.
Добавлена процедура Parser.Type (пока хардкод).
Написана процедура SymTable.NewObj и диагнозтическая процедура SymTable.Display.
Исправлен синтаксический разбор модуля.

26 марта 2019 г.
Добавлены модули SymTable и Generator.
Модуль символьной таблицы содержит типы Object и Type, а также экспортированные процедуры NewObj и Init.
Модуль кодогенератора содержит только определение типа Item.
В модуле синтаксического анализатора (Parser) написать псевдокод считывания объявления переменных в процедуре Declarations.

12 марта 2019 г.
Исправлена обработка пустого оператора (;).

5 марта 2019 г.
Компилятор разделён на три модуля: Compiler, Scanner, Parser.

5 марта 2019 г.
Показан пример считывания диапазона множества {11..15}, лексема upto, приём 7FX

26 февраля 2019 г.
Начат синтаксический анализатор.

26 февраля 2019 г.
Лексический анализатор (сканер) частично готов.
Можно переходить к синтаксическому анализатору (парсеру).