@@ -7,3 +7,4 @@ Compiler
 *.swp
 *.bak
 *.BAK
+Test
