@@ -11,6 +11,8 @@ $(PROG): $(PROG).sym
 	$(CC) -fPIC -g -I $(VOCPATH)/C/include \
 		-o $(PROG) Parser.o Scanner.o \
 		SymTable.o Generator.o \
+		Chmod.o \
+		chmod/chmod.o \
 		$(PROG).o \
 		$(VOCPATH)/lib/libvoc-OC.a
 
@@ -23,11 +25,17 @@ Parser.sym: Parser.Mod Scanner.sym SymTable.sym Generator.sym
 Scanner.sym: Scanner.Mod
 	$(COMPILE) Scanner.Mod
 
-Generator.sym: Generator.Mod SymTable.sym
+Generator.sym: Generator.Mod SymTable.sym Chmod.sym
 	$(COMPILE) Generator.Mod
 
 SymTable.sym: SymTable.Mod
 	$(COMPILE) SymTable.Mod
+
+Chmod.sym: Chmod.Mod chmod/chmod.o
+	$(VOC) -OC -fF Chmod.Mod
+
+chmod/chmod.o: chmod/chmod.c chmod/chmod.h
+	$(CC) -c chmod/chmod.c -o chmod/chmod.o
 
 .PHONY: run clean
 
