@@ -142,6 +142,7 @@ END Module;
 В будущем будет вызывать кодогенератор (из отдельного модуля). *)
 PROCEDURE Compile*(): BOOLEAN;
 BEGIN
+  Gen.WriteDummy; (* Сгенерировать исполнимый файл. Хардкод. *)
   S.Get(sym); (* Получить наперёд одну лексему *)
   Module; (* Запустить разбор синтаксической структуры МОДУЛЬ *)
   ST.Display;
