@@ -1,4 +1,10 @@
 2 апреля 2019 г.
+Добавлена процедура Generator.WriteDummy - создаёт исполнимый файл Test
+с простейшей программой, выводящей на экран "Hi!". Хардкод.
+Файл не работает, но и не вылетает с ошибкой.
+Подключен модуль Chmod для того, чтобы отмечать файл как исполнимый.
+
+2 апреля 2019 г.
 Реализовано объявление переменных:
 Написана процедура Parser.Declarations.
 Добавлена процедура Parser.Type (пока хардкод).
